--- a/main.html
+++ b/main.html
@@ -4,10 +4,82 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<title>HTML Assignment 3</title>
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h3 style="text-align: center;">HTML Assignment #3</h3>
+	<table  id="table-1" border="1px solid black">
+		<tr>
+			<td id="t11">left</td>
+			<td class="center" id="t12">center</td>
+			<td class="right" id="t13">right</td>
+		</tr>
+		<tr>
+			<td>left</td>
+			<td class="center">center</td>
+			<td class="right">right</td>
+		</tr>
+		<tr>
+			<td>left</td>
+			<td class="center">center</td>
+			<td class="right">right</td>
+		</tr>
+	</table>
+
+	
+	<br><br>
+
+	
+	<table id="table-2" border="1px solid black">
+		<tr>
+			<td id="t21" colspan="6"></td>
+		</tr>
+		<tr>
+			<td rowspan="4"></td>
+			<td></td>
+			<td></td>
+			<td></td>
+			<td></td>
+			<td></td>
+		</tr>
+		<tr>
+			<td></td>
+			<td colspan="3" rowspan="2"></td>
+			<td></td>
+		</tr>
+		<tr>
+			<td></td>
+			<td></td>
+		</tr>
+		<tr>
+			<td></td>
+			<td></td>
+			<td></td>
+			<td></td>
+			<td></td>
+		</tr>
+		<tr>
+			<td colspan="6"></td>
+		</tr>
+	</table>
+
+	
+	<br><br>
+
+	
+	<table id="table-3" border="1px solid black">
+		<tr style="background-color:green">
+			<td></td>
+		</tr>
+		<tr>
+			<td><img src="https://www2.d125.org/applied_arts/teched/courses/WEB/portfolios/2013_FallP3/Luthra%20Portfolio/images-1.jpeg" alt="sports"></td>
+		</tr>
+		<tr style="background-color:blue" >
+			<td></td>
+		</tr>
+	</table>
     <script type="text/javascript" src="./script.js">
 </script>
 
