--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<h3 style="text-align: center;">HTML Assignment #3</h3>
-	<table  id="table-1" border="1px solid black">
+	<table class="middle" id="table-1" border="1px solid 1px solid rgb(0, 0, 0)">
 		<tr>
 			<td id="t11">left</td>
 			<td class="center" id="t12">center</td>
@@ -32,7 +32,7 @@
 	<br><br>
 
 	
-	<table id="table-2" border="1px solid black">
+	<table class="middle" id="table-2" border="1px solid 1px solid rgb(0, 0, 0)">
 		<tr>
 			<td id="t21" colspan="6"></td>
 		</tr>
@@ -69,12 +69,12 @@
 	<br><br>
 
 	
-	<table id="table-3" border="1px solid black">
+	<table class="middle" id="table-3" border="1px solid 1px solid rgb(0, 0, 0)">
 		<tr style="background-color:green">
 			<td></td>
 		</tr>
 		<tr>
-			<td><img src="https://www2.d125.org/applied_arts/teched/courses/WEB/portfolios/2013_FallP3/Luthra%20Portfolio/images-1.jpeg" alt="sports"></td>
+			<td><img id="t-image" src="https://www2.d125.org/applied_arts/teched/courses/WEB/portfolios/2013_FallP3/Luthra%20Portfolio/images-1.jpeg" alt="sports"></td>
 		</tr>
 		<tr style="background-color:blue" >
 			<td></td>
