--- a/main.html
+++ b/main.html
@@ -74,7 +74,7 @@
 			<td></td>
 		</tr>
 		<tr>
-			<td><img id="t-image" src="https://www2.d125.org/applied_arts/teched/courses/WEB/portfolios/2013_FallP3/Luthra%20Portfolio/images-1.jpeg" alt="sports"></td>
+			<td id="t-image"><img src="https://www2.d125.org/applied_arts/teched/courses/WEB/portfolios/2013_FallP3/Luthra%20Portfolio/images-1.jpeg" alt="sports"></td>
 		</tr>
 		<tr style="background-color:blue" >
 			<td></td>
